<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#434343"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_usuario"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:id="@+id/editUser"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_senha"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:id="@+id/editPassword"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_logar"
        android:id="@+id/botaoLogar"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:backgroundTint="#03A9F4"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_usuario"
        android:id="@+id/cadastrarUsuario"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        />

</LinearLayout>