<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".MainActivity"
    android:background="#434343"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_app"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/nomeApp"
        app:layout_constraintEnd_toStartOf="@+id/botaoConta"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:layout_marginTop="8dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conta"
        android:textSize="18sp"
        android:backgroundTint="#03A9F4"
        android:id="@+id/botaoConta"
        app:layout_constraintStart_toEndOf="@+id/nomeApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventos"
        android:layout_marginTop="28dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:id="@+id/textoEventos"
        app:layout_constraintTop_toBottomOf="@+id/nomeApp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/image"
        app:layout_constraintTop_toBottomOf="@+id/textoEventos"
        android:id="@+id/imgEvento1"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_evento"
        app:layout_constraintTop_toBottomOf="@+id/imgEvento1"
        android:id="@+id/nomeEvento1"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_evento"
        app:layout_constraintTop_toBottomOf="@+id/nomeEvento1"
        android:id="@+id/descEvento1"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/image"
        app:layout_constraintTop_toBottomOf="@+id/descEvento1"
        android:id="@+id/imgEvento2"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_evento"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/imgEvento2"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/nomeEvento2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_evento"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/nomeEvento2"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/descEvento2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>